bug: show menu with background on mobile

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -284,4 +284,8 @@
   .w-mobile-full {
     width: 100%;
   }
+
+  .h-mobile-auto {
+    height: auto;
+  }
 }
